scripts/tests/errors/err_nil_arithmetic.bu
// Test: arithmetic type mismatches
// Expected: runtime errors about type mismatches

var a = nil * 5;
